framework-config/mysql-config/istio-system-keycloak-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: login-demo-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - <your_keycloak_hostname>
    tls:
      httpsRedirect: true
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
    - <your_keycloak_hostname>
    tls:
      mode: SIMPLE
      credentialName: login-demo-secrets
  - port:
      number: 3306
      name: mysql-port
      protocol: tcp
    hosts:
    - <your_keycloak_hostname>
